[project]
name = "xerxes-protocol"
version = "1.4.4"
description = "Python implementation for xerxes-protocol"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Stanislav Rubint", email = "stanislav@rubint.sk"}
]
dependencies = [
    "pyserial",
    "pytest",
    "rich", 
    "coverage"
]
keywords = [
    "xerxes"
]

[project.urls]
homepage = "http://metrotech.sk"
repository = "https://github.com/metrotech-sk/xerxes-protocol"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
requires-python = {file = "setup.cfg"}
classifiers = {file = "setup.cfg"}
scripts = {file = "setup.cfg"}
